Added image carousel

--- a/index.html
+++ b/index.html
@@ -45,6 +45,80 @@
 
 		</footer>
 
+		<!-- dropdown menu -->
+		<h3 id="menu">Dropdown</h3>
+		<section class="dropdownContent">
+			<ul>
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Item 1</a>
+				<li><a href="#">Item 2</a></li>
+			</ul>
+			<i id="close" class="close far fa-times-circle"></i>
+		</section>
+		
+		<!-- carousel -->
+		<section id="slider"> 
+			<!-- Slider -->
+			  <section class="slides flexContainer">
+				  <section class="slide">
+					  <div class="content">
+						<div class="content-txt">
+						  <h2>Lorem ipsum dolor</h2>
+						  <p>Nam ultrices pellentesque facilisis. In semper tellusmollis nisl pulvinar vitae vulputate lorem consequat. Fusceodio tortor, pretium sit amet auctor ut, ultrices vel nibh.<p>
+						</div>
+					  </div>
+					  <div class="image"> <img src="images/slide01.jpg"></div>
+				  </section>
+				  <section class="slide">
+					  <div class="content">
+						  <div class="content-txt">
+							  <h2>Lorem ipsum dolor</h2>
+							  <p>Nam ultrices pellentesque facilisis. In semper tellusmollis 	nisl pulvinar vitae vulputate lorem consequat. Fusce odio tortor, 	pretium sit amet auctor ut, ultrices vel nibh.<p>
+						  </div>
+					  </div>
+					  <div class="image"> <img src="images/slide02.jpg"> </div>
+				  </section>
+				  <section class="slide">
+					  <div class="content">
+						  <div class="content-txt">
+							  <h2>Lorem ipsum dolor</h2>
+							  <p>Nam ultrices pellentesque facilisis. In semper tellusmollis 	nisl pulvinar vitae vulputate lorem consequat. Fusceodio tortor, 	pretium sit amet auctor ut, ultrices vel nibh.<p>
+						  </div>
+					  </div>
+					  <div class="image"> <img src="images/slide03.jpg"> </div>
+				  </section>
+				  <section class="slide">
+					  <div class="content">
+						  <div class="content-txt">
+							  <h2>Lorem ipsum dolor</h2>
+							  <p>Nam ultrices pellentesque facilisis. In semper tellusmollis 	nisl pulvinar vitae vulputate lorem consequat. Fusceodio tortor, 	pretium sit amet auctor ut, ultrices vel nibh.<p>
+						  </div>
+					  </div>
+					  <div class="image"> <img src="images/slide04.jpg"> </div>
+				  </section>
+				  <section class="slide">
+					  <div class="content">
+						  <div class="content-txt">
+							  <h2>Lorem ipsum dolor</h2>
+							  <p>Nam ultrices pellentesque facilisis. In semper tellusmollis 	nisl pulvinar vitae vulputate lorem consequat. Fusceodio tortor, 	pretium sit amet auctor ut, ultrices vel nibh.<p>
+						  </div>
+					  </div>
+					  <div class="image"> <img src="images/slide05.jpg"> </div>
+				  </section>
+				  <section class="switch">
+					  <ul>
+						  <li>
+							  <div class="on"></div>
+						  </li>
+						  <li></li>
+						  <li></li>
+						  <li></li>
+						  <li></li>
+					  </ul>
+				  </section>
+			  </section>       
+		  </section>
+
 		<!-- Frequently used icons -->
 		<!-- <i class="fab fa-twitter"></i>
 		<i class="fab fa-github"></i>
@@ -72,7 +146,8 @@
 		<i class="fas fa-comment-alt"></i>
 		<i class="far fa-comment-alt"></i>
 		<i class="fas fa-star"></i>
-		<i class="far fa-star"></i> -->
+		<i class="far fa-star"></i>
+		<i class="far fa-times-circle"></i> -->
 
 		<script type="text/javascript" src="js/main.js"></script>
 	</body>
